--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -191,7 +191,7 @@
 
                                 
                                 <div style="col-12 animated fadeInUp">
-                                    <div class="text-start">
+                                    <div class="text-center">
                                         <h4 class="text-white text-uppercase fw-bold mb-4">Solusi Pembiayaan BPKB Mobil & Motor</h4>
                                         <h1 class="display-4 text-uppercase text-white mb-4">Butuh dana tunai Untuk Modal Usaha?</h1>
                                         <p class="fs-5"> Kami siap membantu Anda
