--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ r<!DOCTYPE html>
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="https://azekabek.my.id" class="navbar-brand p-0">
                  
-                  <img class="yalma" src="img/logo1.png" alt="Logo" >
+                  <img class="yalma" src="images/logo.webp" alt="Logo" >
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -199,7 +199,7 @@ r<!DOCTYPE html>
                                         <p><i class="fa fa-check"></i> Limit pinjaman 20jt - 2 Miliar </p>
                                         <p><i class="fa fa-check"></i> Angsuran mulai dari 12-48 bulan</p>
 
-                                        <div class="d-flex flex-shrink-0 mt-4">
+                                        <div class="d-flex flex-shrink-0 mt-4 text-center">
                                             <a class="btn btn-primary rounded-pill py-3 px-4 px-md-5 ms-2" href="https://api.whatsapp.com/send?phone=6282113972383&text=Hallo+admin+danatunaiterdekat.web.id" style="border-radius: .5rem !important;"><i class="fab fa-whatsapp me-2"></i> Ajukan Sekarang</a>    
                                         </div>
                                     </div>  
