--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
     <head>
-        <meta charset="utf-8">
-        <title>Pesona Arkan</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="travel Cirebon Jakarta, travel Cirebon Bandara Soetta, travel Cirebon Tangerang, travel Cirebon Bogor, travel Cirebon Bekasi, travel Cirebon Bandung, travel door to door Cirebon, jasa travel Cirebon terpercaya" name="keywords">
-        <meta content="Layanan travel dari Cirebon ke Jakarta, Bandara Soetta, Bekasi, Bogor, Tangerang, Kalideres, Bandung dan sekitarnya. Antar jemput door to door." name="description">
-        <meta name="robots" content="index, follow">
-        <meta property="og:title" content="Pesona Arkan">
-        <meta property="og:image" content="images/cirebonf.png">
-        <meta property="og:description" content="Layanan travel dari Cirebon ke Jakarta, Bandara Soetta, Bekasi, Bogor, Tangerang, Kalideres, Bandung dan sekitarnya. Antar jemput door to door.">
-        <link rel="apple-touch-icon" sizes="180x180" href="images/cirebonf.png" />
-          <link rel="shortcut icon" href="images/cirebonf.png" />
+      <meta charset="utf-8">
+<title>Pesona Arkan Aluminium</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta name="keywords" content="jasa aluminium Bekasi, pasang kusen aluminium, pintu kaca Bekasi, kanopi kaca Bekasi, partisi aluminium, tukang aluminium Bekasi, jasa pemasangan aluminium, aluminium berkualitas Bekasi">
+<meta name="description" content="Pesona Arkan Aluminium melayani pemasangan kusen aluminium, pintu kaca, kanopi kaca, partisi, dan railing balkon. Jasa profesional dan bergaransi di Bekasi dan sekitarnya.">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="Pesona Arkan Aluminium">
+<meta property="og:image" content="images/fav.webp">
+<meta property="og:description" content="Spesialis aluminium berkualitas di Bekasi. Melayani kusen, pintu kaca, kanopi, dan partisi dengan hasil rapi, kuat, dan tahan lama.">
+<link rel="apple-touch-icon" sizes="180x180" href="images/fav.webp" />
+<link rel="shortcut icon" href="images/fav.webp" />
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -324,7 +324,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="images/New_Avanza.png" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="images/l1.webp" class="img-fluid rounded-top w-100" alt="Image" style="width: 100%;height:300px;object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Pemasangan Kusen Aluminium</a>
@@ -338,7 +338,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="images/New_Avanza.png" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="images/l2.webp" class="img-fluid rounded-top w-100" alt="Image" style="width: 100%;height:300px;object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Pintu & Jendela Aluminium</a>
@@ -352,7 +352,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="images/New_Avanza.png" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="images/l3.webp" class="img-fluid rounded-top w-100" alt="Image" style="width: 100%;height:300px;object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Kanopi Kaca & Polycarbonate</a>
@@ -368,7 +368,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="images/New_Avanza.png" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="images/l4.webp" class="img-fluid rounded-top w-100" alt="Image" style="width: 100%;height:300px;object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Partisi Aluminium & Kaca</a>
@@ -384,7 +384,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="images/New_Avanza.png" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="images/l5.webp" class="img-fluid rounded-top w-100" alt="Image" style="width: 100%;height:300px;object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Railing Balkon & Tangga</a>
@@ -400,7 +400,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="images/New_Avanza.png" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="images/l6.webp" class="img-fluid rounded-top w-100" alt="Image" style="width: 100%;height:300px;object-fit: cover;">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Etalase & Display Toko
